--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "chroma-js": "^1.3.7",
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-animatable": "^1.3.0",
     "react-native-elements": "^0.19.1",
-    "react-native-snap-carousel": "^3.7.2"
+    "react-native-snap-carousel": "^3.7.2",
+    "rgb2hex": "^0.1.4"
   }
 }
