--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native": "~0.55.2",
     "react-native-animatable": "^1.3.0",
     "react-native-elements": "^0.19.1",
+    "react-native-pathjs-charts": "0.0.34",
+    "react-native-pie": "^0.5.0",
     "react-native-snap-carousel": "^3.7.2",
     "rgb2hex": "^0.1.4"
   }
