--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
     "react-native-snap-carousel": "^3.7.2",
+    "react-navigation": "^2.6.2",
     "rgb2hex": "^0.1.4"
   }
 }
