--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
+    "react-native-progress": "^3.5.0",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-typography": "^1.3.0",
     "react-navigation": "^2.6.2",
