--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "~0.55.2",
     "react-native-animatable": "^1.3.0",
     "react-native-elements": "^0.19.1",
+    "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
     "react-native-progress": "^3.5.0",
