--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react-native-snap-carousel": "^3.7.2",
     "react-native-typography": "^1.3.0",
     "react-navigation": "^2.6.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "rgb2hex": "^0.1.4"
   }
 }
