--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chroma-js": "^1.3.7",
     "expo": "^27.0.1",
+    "lodash": "^4.17.10",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-animatable": "^1.3.0",
@@ -32,6 +33,7 @@
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
     "react-native-progress": "^3.5.0",
+    "react-native-simple-store": "^1.3.0",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-typography": "^1.3.0",
     "react-navigation": "^2.6.2",
