--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-indicators": "^0.13.0",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
+    "react-native-modal": "^6.5.0",
     "react-native-modalbox": "^1.6.0",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
