--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "chroma-js": "^1.3.7",
-    "expo": "^27.0.1",
+    "expo": "^30.0.0",
     "lodash": "^4.17.10",
     "react": "16.3.1",
     "react-native": "~0.55.2",
@@ -34,10 +34,11 @@
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
     "react-native-progress": "^3.5.0",
+    "react-native-screens": "^1.0.0-alpha.10",
     "react-native-simple-store": "^1.3.0",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-typography": "^1.3.0",
-    "react-navigation": "^2.6.2",
+    "react-navigation": "^2.13.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
