--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-native-modal": "^6.5.0",
     "react-native-modalbox": "^1.6.0",
+    "react-native-paper": "^2.0.1",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
     "react-native-progress": "^3.5.0",
@@ -39,6 +40,7 @@
     "react-native-snap-carousel": "^3.7.2",
     "react-native-typography": "^1.3.0",
     "react-navigation": "^2.13.0",
+    "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
