--- a/app.json
+++ b/app.json
@@ -1,5 +1,30 @@
 {
   "expo": {
-    "sdkVersion": "30.0.0"
+    "name": "LinkPad",
+    "icon": "./assets/icon.png",
+    "version": "1.0.0",
+    "slug": "linkpad-review",
+    "sdkVersion": "30.0.0",
+    "description": "This project is really great.",
+    "privacy": "public",
+    "platforms": ["ios", "android"],
+    "orientation": "portrait",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "bundleIdentifier": "com.yourcompany.yourappname"
+    },
+    "android": {
+      "package": "com.yourcompany.yourappname"
+    }
   }
 }
