--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-snap-carousel": "^3.7.2",
     "react-native-typography": "^1.3.0",
     "react-navigation": "^2.13.0",
+    "react-navigation-backhandler": "^1.1.1",
     "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
