--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "^1.0.0-alpha.10",
     "react-native-simple-store": "^1.3.0",
     "react-native-snap-carousel": "^3.7.2",
+    "react-native-swiper": "^1.5.13",
     "react-native-typography": "^1.3.0",
     "react-navigation": "^2.13.0",
     "react-navigation-backhandler": "^1.1.1",
