--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "~0.55.2",
     "react-native-animatable": "^1.3.0",
     "react-native-elements": "^0.19.1",
+    "react-native-gesture-handler": "^1.0.8",
     "react-native-indicators": "^0.13.0",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-native-modal": "^6.5.0",
