--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "dependencies": {
     "chroma-js": "^1.3.7",
-    "expo": "^30.0.0",
+    "expo": "^31.0.4",
     "lodash": "^4.17.10",
-    "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
     "react-native-animatable": "^1.3.0",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.8",
