--- a/package.json
+++ b/package.json
@@ -8,26 +8,24 @@
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "jest"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "chroma-js": "^1.3.7",
-    "expo": "^31.0.4",
+    "expo": "^32.0.0",
     "lodash": "^4.17.10",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.3.0",
     "react-native-elements": "^0.19.1",
-    "react-native-gesture-handler": "^1.0.8",
     "react-native-indicators": "^0.13.0",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
