1) Added App Icon, 2) bugfix: asset bundling, yellowbox warnings (proptypes, defaultProps, invalid animation prop etc.), createQuizModal empty descriptions, 3) CustomQuizExam wip: choices gradient bg, logic (getters), animate in card, Cancel Alert + logic, 4) QuizExamDoneModal: wip - modal impl. (logic + wrapper), sectionlist impl. wip - quizDetails section + headers (details, stats, question/answer)

--- a/app.json
+++ b/app.json
@@ -18,7 +18,9 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
-      "**/*"
+      "**/*",
+      "assets/*",
+      "assets/icons/*"
     ],
     "ios": {
       "bundleIdentifier": "com.yourcompany.yourappname"
