--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chroma-js": "^1.3.7",
     "expo": "^30.0.0",
     "lodash": "^4.17.10",
+    "moment": "^2.24.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-animatable": "^1.3.0",
