--- a/package.json
+++ b/package.json
@@ -39,17 +39,15 @@
     "react-native-pie": "^0.5.0",
     "react-native-progress": "^3.5.0",
     "react-native-screens": "^1.0.0-alpha.10",
+    "react-native-segmented-control-tab": "^3.4.0",
     "react-native-simple-store": "^1.3.0",
     "react-native-snap-carousel": "^3.7.2",
+    "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.13",
     "react-native-timeago": "^0.4.0",
-    "react-native-typography": "^1.3.0",
     "react-navigation": "^2.13.0",
     "react-navigation-backhandler": "^1.1.1",
     "react-navigation-material-bottom-tabs": "^0.4.0",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
     "rgb2hex": "^0.1.4"
   }
 }
