--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
@@ -20,14 +20,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.1",
     "chroma-js": "^1.3.7",
-    "expo": "^30.0.0",
+    "expo": "^31.0.4",
     "lodash": "^4.17.10",
     "moment": "^2.24.0",
-    "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
     "react-native-animatable": "^1.3.0",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.0.8",
     "react-native-indicators": "^0.13.0",
     "react-native-iphone-x-helper": "^1.2.0",
