--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "react-native-indicators": "^0.13.0",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modal": "^6.5.0",
     "react-native-modalbox": "^1.6.0",
     "react-native-paper": "^2.1.3",
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
     "react-native-progress": "^3.5.0",
+    "react-native-reanimated": "^1.0.0-alpha.8",
     "react-native-screens": "^1.0.0-alpha.10",
     "react-native-segmented-control-tab": "^3.4.0",
     "react-native-simple-store": "^1.3.0",
