--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.1",
+    "axios": "^0.18.0",
     "chroma-js": "^1.3.7",
     "expo": "^31.0.4",
     "lodash": "^4.17.10",
