--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@expo/vector-icons": "^10.0.1",
     "axios": "^0.18.0",
     "chroma-js": "^1.3.7",
+    "events": "^3.0.0",
     "expo": "^31.0.4",
     "lodash": "^4.17.10",
     "moment": "^2.24.0",
@@ -52,6 +53,7 @@
     "react-navigation": "^2.13.0",
     "react-navigation-backhandler": "^1.1.1",
     "react-navigation-material-bottom-tabs": "^0.4.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.8",
     "rgb2hex": "^0.1.4"
   }
 }
