--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
     "react-native-animatable": "^1.3.0",
     "react-native-elements": "^1.1.0",
-    "react-native-gesture-handler": "^1.0.8",
+    "react-native-gesture-handler": "^1.2.1",
     "react-native-indicators": "^0.13.0",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
@@ -42,7 +42,7 @@
     "react-native-pathjs-charts": "0.0.34",
     "react-native-pie": "^0.5.0",
     "react-native-progress": "^3.5.0",
-    "react-native-reanimated": "^1.0.0-alpha.8",
+    "react-native-reanimated": "^1.0.1",
     "react-native-screens": "^1.0.0-alpha.10",
     "react-native-segmented-control-tab": "^3.4.0",
     "react-native-simple-store": "^1.3.0",
