--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-segmented-control-tab": "^3.4.0",
     "react-native-simple-store": "^1.3.0",
     "react-native-snap-carousel": "^3.7.2",
+    "react-native-super-grid": "^3.0.4",
     "react-native-svg-charts": "^5.2.0",
     "react-native-swiper": "^1.5.13",
     "react-native-timeago": "^0.4.0",
