--- a/app.json
+++ b/app.json
@@ -1,13 +1,16 @@
 {
   "expo": {
-    "name": "LinkPad",
+    "name": "Linkpad Review",
     "icon": "./assets/icon.png",
-    "version": "1.0.0",
+    "version": "0.1",
     "slug": "linkpad-review",
-    "sdkVersion": "32.0.0",
-    "description": "This project is really great.",
     "privacy": "public",
-    "platforms": ["ios", "android"],
+    "sdkVersion": "33.0.0",
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "description": "Linkpad Pharmacy Review.",
     "orientation": "portrait",
     "splash": {
       "image": "./assets/splash.png",
@@ -18,15 +21,10 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
-      "**/*",
-      "assets/*",
-      "assets/icons/*"
+      "**/*"
     ],
     "ios": {
-      "bundleIdentifier": "com.yourcompany.yourappname"
-    },
-    "android": {
-      "package": "com.yourcompany.yourappname"
+      "supportsTablet": true
     }
   }
 }
