--- a/package.json
+++ b/package.json
@@ -1,58 +1,50 @@
 {
-  "name": "Reviewer",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "@types/react-native": "^0.55.27",
-    "jest-expo": "~27.0.0",
-    "react-native-scripts": "1.14.0",
-    "react-test-renderer": "16.3.1"
-  },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.1",
-    "axios": "^0.18.0",
-    "chroma-js": "^1.3.7",
+    "axios": "^0.19.0",
+    "chroma-js": "^2.0.4",
     "events": "^3.0.0",
-    "expo": "^32.0.0",
-    "lodash": "^4.17.10",
+    "expo": "^33.0.0",
+    "expo-constants": "^5.0.1",
+    "expo-file-system": "^5.0.1",
+    "expo-font": "^5.0.1",
+    "expo-linear-gradient": "^5.0.1",
+    "lodash": "^4.17.11",
+    "lottie-react-native": "^2.6.1",
     "moment": "^2.24.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-animatable": "^1.3.0",
+    "react": "16.8.3",
+    "react-dom": "^16.8.6",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-animatable": "^1.3.2",
     "react-native-elements": "^1.1.0",
     "react-native-indicators": "^0.13.0",
-    "react-native-iphone-x-helper": "^1.2.0",
-    "react-native-keyboard-aware-scroll-view": "^0.6.0",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-modal": "^6.5.0",
-    "react-native-modalbox": "^1.6.0",
-    "react-native-paper": "^2.1.3",
-    "react-native-pathjs-charts": "0.0.34",
+    "react-native-paper": "^2.16.0",
     "react-native-pie": "^0.5.0",
-    "react-native-progress": "^3.5.0",
+    "react-native-progress": "^3.6.0",
     "react-native-segmented-control-tab": "^3.4.0",
     "react-native-simple-store": "^1.3.0",
-    "react-native-snap-carousel": "^3.7.2",
+    "react-native-snap-carousel": "^3.8.0",
     "react-native-super-grid": "^3.0.4",
     "react-native-svg-charts": "^5.2.0",
-    "react-native-swiper": "^1.5.13",
-    "react-native-tab-view": "^2.5.0",
+    "react-native-swiper": "^1.5.14",
     "react-native-timeago": "^0.4.0",
-    "react-navigation": "^2.13.0",
-    "react-navigation-backhandler": "^1.1.1",
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^2.18.3",
+    "react-navigation-backhandler": "^1.3.2",
     "react-navigation-material-bottom-tabs": "^0.4.0",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.8",
-    "rgb2hex": "^0.1.4"
-  }
+    "rgb2hex": "^0.1.9"
+  },
+  "devDependencies": {
+    "babel-preset-expo": "^5.1.1"
+  },
+  "private": true
 }
